add simple parser with and and or combinators

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,8 +19,7 @@
 			"request": "launch",
 			"name": "Launch Program",
 			"smartStep": true,
-			"program": "${workspaceFolder}\\lib\\index.js",
-			"preLaunchTask": "tsc: build - tsconfig.json",
+			"program": "${file}",
 			"outFiles": [
 				"${workspaceFolder}/lib/**/*.js"
 			]
